--- a/index.html
+++ b/index.html
@@ -1414,6 +1414,12 @@
         <img id="lightbox-img" src="">
     </div>
 
+    <title>Tiêu đề Trang Web Của Bạn</title>
+<meta name="description" content="Am kinne :Đ">
+
+<meta property="og:image" content="https://raw.githubusercontent.com/kinne-luu/kinne-luu.github.io/refs/heads/main/image%20pack/thumbnail.jpg">
+
+
     <script>
         const card = document.getElementById("profileCard");
         const container = document.querySelector(".profile-card-wrapper");
