--- a/index.html
+++ b/index.html
@@ -1414,8 +1414,8 @@
         <img id="lightbox-img" src="">
     </div>
 
-    <title>Tiêu đề Trang Web Của Bạn</title>
-<meta name="description" content="Am kinne :Đ">
+    <title>meow meow meow</title>
+<meta name="description" content="Mô tả trang web.">
 
 <meta property="og:image" content="https://raw.githubusercontent.com/kinne-luu/kinne-luu.github.io/refs/heads/main/image%20pack/thumbnail.jpg">
 
