--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@
     </div>
 
     <title>meow meow meow</title>
-<meta name="description" content="Mô tả trang web.">
+<meta name="description" content="meow meow meow">
 
 <meta property="og:image" content="https://raw.githubusercontent.com/kinne-luu/kinne-luu.github.io/refs/heads/main/image%20pack/thumbnail.jpg">
 
