--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kinne_luu.nyaa</title>
+    <title>Tiêu đề Trang Web Của Bạn</title>
+<meta name="description" content="Meow Meow Meow">
+<meta property="og:image" content="https://raw.githubusercontent.com/kinne-luu/kinne-luu.github.io/refs/heads/main/image%20pack/thumbnail.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
@@ -1413,12 +1416,6 @@
     <div id="lightbox">
         <img id="lightbox-img" src="">
     </div>
-
-    <title>meow meow meow</title>
-<meta name="description" content="meow meow meow">
-
-<meta property="og:image" content="https://raw.githubusercontent.com/kinne-luu/kinne-luu.github.io/refs/heads/main/image%20pack/thumbnail.jpg">
-
 
     <script>
         const card = document.getElementById("profileCard");
